Bug 493249 - The dynamic brush, uses the settings on the weighted freehand brush, the weighted freehand brush takes the settings of the dynamic brush.
Summary: The dynamic brush, uses the settings on the weighted freehand brush, the weig...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Freehand (other bugs)
Version First Reported In: 5.2.4
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Lynx3d
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-17 10:47 UTC by Steelhawk
Modified: 2024-10-23 12:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Dynamic brush with outline (2.87 KB, image/png)
2024-09-17 10:47 UTC, Steelhawk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Steelhawk 2024-09-17 10:47:33 UTC
Created attachment 173758 [details]
Dynamic brush with outline

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

SUMMARY
I recently started using the dynamic brush, a great alternative for weighted. I set dynamic brush to "B" and then since I use the stabilizer I set freehand to "P" swapping between the stabilizer freehand brush, and the dynamic brush. Now a bug occurred and my dynamic brush has the outline of the stabilizer. But even weirder it acts as the weighted brush, affecting the settings of the weighted freehand brush changes how the dynamic brush behaves. And vice versa the weighted freehand brush, acts as the dynamic brush. Oddly enough in any new document this does not happen right away. Until it does. I do not not know how to reproduce this. 

OBSERVED RESULT
Dynamic brush handles like the weighted brush and has the stabilizer outline.

EXPECTED RESULT
Dynamic brush doing what it should do

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Steelhawk 2024-10-06 12:05:37 UTC
Update. A fellow user has been able to replicate the bug. If the freehand brush is on stabilizer mode and the document is closed. The next time the document is opened, dynamic brush tool will have the stabilizer outlines and will behave like the weighted brush and vice versa.

When the same document is closed with the freehand brush in weighted mode. The next time you open the document the dynamic brush behaves as normal
Comment 2 Edict 2024-10-06 12:20:07 UTC
Closing and reopening the program applies Freehand Brush Tool options to Dynamic Brush Tool.
To get default Dynamic Brush Tool the document needs to be closed with no smoothing enabled, as in None selected. As is the selected one gets applied, whether it be Basic, Weighted, Stabilizer or Pixel.

To recreate the bug:
- Enable Stabilization in Freehand Brush Tool.
- Close document.
- Open document.
- Select Dynamic Brush Tool.

OBSERVED RESULT
Document opens with Freehand Brush Tool Options applied to Dynamic Brush tool.

EXPECTED RESULT
Document opens with Dynamic Brush Tool without hidden modifications. 

Windows: Windows 10 (x86_64)
Krita 5.3.0-prealpha (git fac6dc4)
Comment 3 Dmitry Kazakov 2024-10-11 07:52:57 UTC
Git commit 175c643b9497ae89c89ca9442e87be309cf50864 by Dmitry Kazakov, on behalf of Mathias Wein.
Committed on 11/10/2024 at 07:52.
Pushed by dkazakov into branch 'master'.

Dynamic brush tool shouldn't load the saved smoothing configuration

The tool has no UI to change those settings, and does its own input
filtering that is only compatible with the simple smoothing algorithm.

M  +4    -2    libs/ui/tool/kis_tool_freehand.cc
M  +2    -1    libs/ui/tool/kis_tool_freehand.h
M  +1    -1    plugins/tools/tool_dyna/kis_tool_dyna.cpp

https://invent.kde.org/graphics/krita/-/commit/175c643b9497ae89c89ca9442e87be309cf50864
Comment 4 Dmitry Kazakov 2024-10-11 07:53:24 UTC
Git commit 5090520919dcd9a77ef818b7ec4713a0e618179b by Dmitry Kazakov.
Committed on 11/10/2024 at 07:53.
Pushed by dkazakov into branch 'krita/5.2'.

Dynamic brush tool shouldn't load the saved smoothing configuration

The tool has no UI to change those settings, and does its own input
filtering that is only compatible with the simple smoothing algorithm.


(cherry picked from commit 175c643b9497ae89c89ca9442e87be309cf50864)

Co-authored-by: Mathias Wein <lynx.mw+kde@gmail.com>

M  +4    -2    libs/ui/tool/kis_tool_freehand.cc
M  +2    -1    libs/ui/tool/kis_tool_freehand.h
M  +1    -1    plugins/tools/tool_dyna/kis_tool_dyna.cpp

https://invent.kde.org/graphics/krita/-/commit/5090520919dcd9a77ef818b7ec4713a0e618179b
Comment 5 Steelhawk 2024-10-12 08:49:59 UTC
(In reply to Dmitry Kazakov from comment #4)
> Git commit 5090520919dcd9a77ef818b7ec4713a0e618179b by Dmitry Kazakov.
> Committed on 11/10/2024 at 07:53.
> Pushed by dkazakov into branch 'krita/5.2'.
> 
> Dynamic brush tool shouldn't load the saved smoothing configuration
> 
> The tool has no UI to change those settings, and does its own input
> filtering that is only compatible with the simple smoothing algorithm.
> 
> 
> (cherry picked from commit 175c643b9497ae89c89ca9442e87be309cf50864)
> 
> Co-authored-by: Mathias Wein <lynx.mw+kde@gmail.com>
> 
> M  +4    -2    libs/ui/tool/kis_tool_freehand.cc
> M  +2    -1    libs/ui/tool/kis_tool_freehand.h
> M  +1    -1    plugins/tools/tool_dyna/kis_tool_dyna.cpp
> 
> https://invent.kde.org/graphics/krita/-/commit/
> 5090520919dcd9a77ef818b7ec4713a0e618179b

So does this mean, in the next nightly, or main krita update. This issue will no longer occur?
Comment 6 Edict 2024-10-23 12:38:37 UTC
Feedback from a bit of hindsight and use.

I wish I had said that the expected behavior is it having its own UI for the stabilization options and remembering them.
Because sometimes doubling up on them is useful. 
Like how Weighted smoothing adds snap to cursor to the tools functionality, or when using Pixel smoothing it has nicer lines when working very small.

However it's much appreciated the tool's behavior doesn't change under me when I open the program now!