Dynamic brush tool shouldn't load the saved smoothing configuration

The tool has no UI to change those settings, and does its own input
filtering that is only compatible with the simple smoothing algorithm.

BUG:493249